--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "My Extension",
+  "name": "ReadQuest",
   "version": "1.0",
   "permissions": ["activeTab", "scripting"],
   "action": {
